weather api got into use